Squished fixed(?)

--- a/APS_Dashboard/WebContent/styles/navigation.css
+++ b/APS_Dashboard/WebContent/styles/navigation.css
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: center;
     width: 100%;  
+    min-width: 500px;
 }
 
 .nav-label {
